# bakkesmod

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
examples/hello-plugin/: CMakeLists.txt  hello_plugin.cpp
examples/rumble-timer/: CMakeLists.txt  rumble_timer_plugin.cpp
include/: plugin_api.h
src/: console.cpp  console.h  game_memory.cpp  game_memory.h  main.cpp  overlay.cpp  overlay.h  plugin_manager.cpp  plugin_manager.h
